--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume Builder</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bu ndle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
 <body>
   <div id="container">
@@ -24,7 +24,7 @@
       <input type="url" id="linkedin" placeholder="Enter your LinkedIn Profile">
 
       <label for="github">GitHub Profile:</label>
-      <input type="url" id="github" placeholder="Enter your Github Profile">
+      <input type="url" id="github" placeholder="Enter your GitHub Profile">
 
       <label for="experience">Work Experience:</label>
       <textarea id="experience" rows="4" placeholder="Enter your Work Experience"></textarea>
@@ -38,35 +38,22 @@
       <button type="button" onclick="generateResume()">Preview Resume</button>
     </form>
 
-    <center><div class="resume-output" id="resume-output">
-      <h1><span id="output-name"></span></h1>
-      <p><img id="output-photo" alt="Uploaded photo" style="max-width: 100px; display: none;"></p>
-      <p><strong>Email:</strong> <span id="output-email"></span></p>
-      <p><strong>Phone:</strong> <span id="output-phone"></span></p>
-      <p><strong>LinkedIn:</strong> <span id="output-linkedin"></span></p>
-      <p><strong>GitHub:</strong> <span id="output-github"></span></p>
-      <p><strong>Experience:</strong> <span id="output-experience"></span></p>
-      <p><strong>Education:</strong> <span id="output-education"></span></p>
-      <button id="download" onclick="downloadResume()">Download Resume</button>
-    </div></center>
+    <center>
+      <div class="resume-output" id="resume-output" style="display: none;">
+        <h1><span id="output-name"></span></h1>
+        <p><img id="output-photo" alt="Uploaded photo" style="max-width: 100px; display: none;"></p>
+        <p><strong>Email:</strong> <span id="output-email"></span></p>
+        <p><strong>Phone:</strong> <span id="output-phone"></span></p>
+        <p><strong>LinkedIn:</strong> <span id="output-linkedin"></span></p>
+        <p><strong>GitHub:</strong> <span id="output-github"></span></p>
+        <p><strong>Experience:</strong> <span id="output-experience"></span></p>
+        <p><strong>Education:</strong> <span id="output-education"></span></p>
+        <button type="button" onclick="downloadResume()">Download Resume</button>
+      </div>
+    </center>
   </div>
-  <script>
-    function downloadResume() {
-    const resume = document.getElementById('preview');
-    const download = document.getElementById('download');
 
-    download.addEventListener('click', () => {
-        const options = {
-            margin: 1,
-            filename: 'Resume.pdf',
-            image: { type: 'jpeg', quality: 0.98 },
-            html2canvas: { scale: 2 },
-            jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
-        };
-        
-        html2pdf().set(options).from(resume).save();
-    });
-}
+  <script>
     function generateResume() {
       // Get input values
       document.getElementById("output-name").textContent = document.getElementById("name").value;
@@ -94,6 +81,17 @@
       // Show the resume output
       document.getElementById("resume-output").style.display = "block";
       document.getElementById("resume-form").style.display = "none";
+    }
+
+    function downloadResume() {
+      const element = document.getElementById('resume-output');
+      html2pdf(element, {
+        margin:       0,
+        filename:     'resume.pdf',
+        image:        { type: 'jpeg', quality: 0.98 },
+        html2canvas:  { scale: 2 },
+        jsPDF:        { unit: 'in', format: 'a4', orientation: 'portrait' }
+      });
     }
   </script>
 </body>
